tests/parser/invalid/var-colon.inox
Module ParserInvalidVarColon

Main() :
    Var :
        X Integer := 10
    ;
;
